bakkie_derive/tests/ui/fail/tool_on_struct.rs
use bakkie_derive::tool;

#[tool]
struct MyStruct {
    field: String,
}

fn main() {}