bakkie_derive/tests/ui/fail/tool_on_struct.stderr
error: expected `fn`
 --> tests/ui/fail/tool_on_struct.rs:4:1
  |
4 | struct MyStruct {
  | ^^^^^^
